feat: add card and card list components with basic structure and styling

--- a/src/app/features/page/home/home.component.html
+++ b/src/app/features/page/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="main">
+    <div class="main__bar">
+        <img class="main__logo" [src]="icon" alt="Logo teste anota ai">
+        <div class="">
+            <h3 class="main__title">Teste de Desenvolvedor Front-End-Anota AI</h3>
+            <span class="main__subtitle">Gustavo Henrique Meinhardt Karnopp</span>
+        </div>
+    </div>
+    <div class="main_card">
+        cards
+    </div>
+</div>
