feat: update app configuration and home component to include HttpClient and card list

--- a/src/app/features/page/home/home.component.html
+++ b/src/app/features/page/home/home.component.html
@@ -7,6 +7,6 @@
         </div>
     </div>
     <div class="main_card">
-        cards
+        <app-card-list></app-card-list>>
     </div>
 </div>
