fix: correct card class name in home component and update styles for consistency

--- a/src/app/features/page/home/home.component.html
+++ b/src/app/features/page/home/home.component.html
@@ -6,7 +6,7 @@
             <span class="main__subtitle">Gustavo Henrique Meinhardt Karnopp</span>
         </div>
     </div>
-    <div class="main_card">
-        <app-card-list></app-card-list>>
+    <div class="card">
+        <app-card-list></app-card-list>
     </div>
 </div>
