refactor: update card model to use 'img' property and adjust card component for consistency style: modify card list grid padding for improved layout debug: add console log for card data in ngOnInit of card list component

--- a/src/app/features/components/card/card.component.html
+++ b/src/app/features/components/card/card.component.html
@@ -2,12 +2,11 @@
     <button class="card__close" (click)="delete.emit(card.id)">
       <img [src]="close" alt="Fechar" />
     </button>
-  
-    <img [src]="card.imageUrl" alt="{{card.title}}" class="card__image" />
+    <img [src]="`${card.img}`" alt="{{card.title}}" class="card__image" />
   
     <div class="card__body">
       <h2 class="card__title">{{ card.title }}</h2>
-      <p class="card__description">{{ card.description }}</p>
+        <p class="card__description" >{{ card.description }}</p>
       <span class="card__type">{{ typeName }}</span>
     </div>
   </div>
