--- a/src/app/features/components/card-list/card-list.component.scss
+++ b/src/app/features/components/card-list/card-list.component.scss
@@ -25,7 +25,7 @@
     }
     &__grid {
         display: grid;
-        padding: 0rem 2rem;
+        padding: 0rem 2rem 2rem 2rem;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         gap: 1.5rem;
     }
