--- a/src/app/features/components/card/card.component.scss
+++ b/src/app/features/components/card/card.component.scss
@@ -29,24 +29,28 @@
     &__body {
       padding: 1rem;
   
-      &__title {
-        font-size: 1.2rem;
-        font-weight: bold;
-      }
-  
-      &__description {
-        margin: 0.5rem 0;
-        color: #555;
-      }
-  
-      &__type {
-        display: inline-block;
-        background-color: #eee;
-        padding: 0.3rem 0.8rem;
-        border-radius: 20px;
-        font-size: 0.8rem;
-        color: #333;
-      }
+    }
+    &__title {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    &__description {
+      margin: 0.5rem 0;
+      color: #555;
+
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    &__type {
+      display: inline-block;
+      background-color: #eee;
+      padding: 0.3rem 0.8rem;
+      border-radius: 20px;
+      font-size: 0.8rem;
+      color: #333;
     }
   }
   
