--- a/src/app/features/components/card/card.component.scss
+++ b/src/app/features/components/card/card.component.scss
@@ -5,6 +5,10 @@
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
+  opacity: 0.6;
+  transition: transform 0.9s, 
+  opacity 0.9s;
+
   &__image-wrapper {
     position: relative;
     width: 100%;
@@ -85,4 +89,9 @@
     overflow: hidden;
     -webkit-box-orient: vertical;
   }
+}
+
+.card:hover{
+  opacity: 1;
+  transform: scale(1.1);
 }
