--- a/src/app/features/components/card-list/card-list.component.scss
+++ b/src/app/features/components/card-list/card-list.component.scss
@@ -16,6 +16,7 @@
         padding: 10px;
         border-radius: 3px 0px 0px 3px;
         outline: none;
+        width: 100px;
     }
     &__button{
         padding: 10px;
