refactor: clean up AppComponent tests and remove unused title property; update CardComponent to fix type handling and enhance tests with additional assertions

--- a/src/app/features/components/card/card.component.html
+++ b/src/app/features/components/card/card.component.html
@@ -3,7 +3,7 @@
     <button class="card__close" (click)="delete.emit(card.id)">
       <img [src]="close" alt="Fechar" />
     </button>
-    <span class="card__type" [style]="`background: ${typeName.color};`">{{ typeName.type }}</span>
+    <span class="card__type" [style]="`background: ${type.color};`">{{ type.type }}</span>
     <img [src]="card.img" alt="{{card.title}}" class="card__image" />
   </div>
 
